--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,15 @@ services:
       POSTGRES_DB: auth-app
     ports:
       - "5432:5432"
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
   graphql-engine:
     image: hasura/graphql-engine:v2.19.0
     ports:
-      - "8080:8080"
+      - "8081:8080"
     depends_on:
       - "postgres"
     restart: always
