--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,7 +11,7 @@
     /* JavaScript Support */
 
     /* Emit */
-    "sourceMap": true /* Create source map files for emitted JavaScript files. */,
+    "sourceMap": false /* Create source map files for emitted JavaScript files. */,
     "outDir": "./dist" /* Specify an output folder for all emitted files. */,
     /* Interop Constraints */
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
